# srvchk

./: .gitignore  Cargo.toml  README.md  build.alpine  build.archlinux  build.win64  example.conf
src/: arguments.rs  configuration.rs  logging.rs  main.rs  notifier.rs  pinger.rs
